--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ftp.html">FTP Client Softwares</a></li>
+                <li><a href="formpage.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <div class="banner">
     </div>
 
