--- a/formpage.html
+++ b/formpage.html
@@ -13,8 +13,20 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="form.css" >
         <script src="form.js"></script>
+    <link rel="stylesheet" href="styles.css">
+        
     </head>
+    
     <body >
+        <header> 
+            <a href="home.html" class ="logo"><span>W</span>eb Admin 101</a>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="ftp.html">FTP Client Softwares</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="container">
             <div class="imagebg"></div>
             <div class="row " style="margin-top: 50px">
@@ -25,6 +37,63 @@
                         <div class="row">
                             <div class="col-sm-12 form-group">
                                 <label>How do you rate your overall experience?</label>
+                                <p>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="bad" >
+                                        Bad 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="average" >
+                                        Average 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="good" >
+                                        Good 
+                                    </label>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <label>Question here?</label>
+                                <p>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="bad" >
+                                        Bad 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="average" >
+                                        Average 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="good" >
+                                        Good 
+                                    </label>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <label>Question here?</label>
+                                <p>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="bad" >
+                                        Bad 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="average" >
+                                        Average 
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="experience" id="radio_experience" value="good" >
+                                        Good 
+                                    </label>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <label>Question here?</label>
                                 <p>
                                     <label class="radio-inline">
                                         <input type="radio" name="experience" id="radio_experience" value="bad" >
@@ -59,7 +128,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12 form-group">
-                                <button type="submit" class="btn btn-lg btn-warning btn-block" >Post </button>
+                                <button style="color: black;"type="submit" class="btn" >Post </button>
                             </div>
                         </div>
                     </form>
